<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.agro.agromall.viewmodels.VMRegisterFarmer2"/>
        <variable
            name="imagePicker"
            type="com.agro.agromall.ImagePicker"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".views.RegisterFarmer2">

        <Button
            android:id="@+id/submit"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_design"
            android:contentDescription="@string/login_button"
            android:fontFamily="@font/lato_regular"
            android:text="@string/next"
            android:textColor="#ffffff"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text" />

        <FrameLayout
            android:id="@+id/dpStack"
            android:layout_width="200dp"
            android:layout_height="190dp"
            android:layout_marginTop="96dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bar">

            <ImageView
                android:id="@+id/dp"
                android:contentDescription = "@string/profile_picture_container"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:background="@drawable/rounded_image_background"
                android:src="@drawable/user2"
                />


            <ImageButton
                android:id="@+id/button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/image_button"
                android:layout_gravity="bottom|end"
                android:background="@drawable/rounded_button_background"
                android:src="@drawable/camera"
                />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/back_arrow"
                android:background="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lato_bold"
                android:text="@string/profile_picture"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/upload"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/dpStack" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>