<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.agro.agromall.viewmodels.VMRegisterFarmer3" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".views.RegisterFarmer3">

        <Button
            android:id="@+id/log_in"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="24dp"
            android:background="@drawable/button_design"
            android:contentDescription="@string/login_button"
            android:fontFamily="@font/lato_bold"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:onClick="@{(v)->viewModel.onRegister3Clicked(v)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.568"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text2"
            app:layout_constraintVertical_bias="0.191" />

        <EditText
            android:id="@+id/farm_address"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:afterTextChanged="@{(editable)->viewModel.afterFarmAddressTextChanged(editable)}"
            android:background="@drawable/edit_text_design_states"
            android:drawableStart="@drawable/mappin"
            android:drawablePadding="8dp"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/farm_address"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/farm_name" />

        <EditText
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_design_states"
            android:drawableStart="@drawable/compass"
            android:drawablePadding="8dp"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/longitude"
            android:inputType="text"
            android:afterTextChanged="@{(editable)->viewModel.afterLongitudeTextChanged(editable)}"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text" />

        <EditText
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_design_states"
            android:drawableStart="@drawable/compass"
            android:drawablePadding="8dp"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/latitude"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:afterTextChanged="@{(editable)->viewModel.afterLatitudeTextChanged(editable)}"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/longitude" />

        <EditText
            android:id="@+id/farm_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:afterTextChanged="@{(editable)->viewModel.afterFarmNameTextChanged(editable)}"
            android:background="@drawable/edit_text_design_states"
            android:drawableStart="@drawable/user"
            android:drawablePadding="8dp"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/farm_name"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bar" />

        <ImageView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/farm_map"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/latitude" />

        <LinearLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_arrow_right"
                android:contentDescription="@string/back_arrow"
                android:paddingStart="16dp"
                android:paddingEnd="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lato_bold"
                android:text="@string/farm_details"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/choose_location"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/map" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/lato_regular"
            android:text="@string/farm_coordinates"
            android:textAlignment="textStart"
            android:textColor="#ffffff"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/farm_address" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>